# htsa

./: .gitignore  CHEATSHEET.md  CLAUDE.md  FRAMEWORK.md  README.md  design.md  package.json
.studio/: log.json
design/: .design-version  DESIGN.md  design.json
docs/: 404.html  ANTIPATTERNS.md  CONTRIBUTING.md  README.md  chunk-3wmc1jbh.js  chunk-n5r3v493.js  chunk-wwsem4vh.css  chunk-zwpw2bwe.css  diagrams.md
engine/: README.md  pyproject.toml
engine/htsa_engine/: __init__.py  export.py  investigation.py  learning_loop.py  serialization.py  situation_map.py
engine/htsa_engine/analysis/: __init__.py  bias.py  budget.py  evidence.py  heredity.py  loops.py  probability.py  search.py
engine/htsa_engine/causation/: __init__.py  counterfactual.py  graded.py  intervention.py  pns.py
engine/htsa_engine/core/: __init__.py  enums.py  graph.py  models.py  models_causation.py
engine/htsa_engine/llm/: advisor.py
engine/htsa_engine/resolution/: __init__.py  engine.py  verification.py
engine/htsa_engine/tests/: __init__.py  fixtures.py  test_counterfactual.py  test_intervention.py  test_pns.py
examples/: 00_index.md  README.md
math/: 00_index.md  01_graph_theory.md  03_causal_inference.md  04_information_theory.md  05_bayesian_reasoning.md  06_search_algorithms.md  08_evidence_evaluation.md  10_intervention_theory.md  README.md
proofs/: 00_index.md  01_formal_definitions.md  02_algorithm.md  03_termination.md  04_completeness.md  05_optimality.md  06_convergence.md  07_information_gain.md  README.md
research/: gap_causal_entropy.md  gap_expand_principled.md  (+7 more)
(+107 files in other folders)
