[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "htsa-engine"
version = "2.0.0"
description = "How to Solve Anything — investigation engine with Bayesian tracking, causation theory (HP2015/NESS/PNS), intervention theory, and evidence budget"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["htsa_engine*"]
